--- a/src/unittest/CMakeLists.txt
+++ b/src/unittest/CMakeLists.txt
@@ -47,7 +47,7 @@ install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 include(GoogleTest)
 gtest_discover_tests(${PROJECT_NAME})
 
-add_custom_target(run_unit_test ALL
-    COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure
-    DEPENDS ${PROJECT_NAME})
+#add_custom_target(run_unit_test ALL
+#    COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure
+#    DEPENDS ${PROJECT_NAME})
 
