--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -168,6 +168,7 @@ jobs:
         cmake --build . --config ${{ matrix.build_type }}
 
     - name: Test
+      if: matrix.os == 'ubuntu-latest'
       shell: bash
       run: |
         cd build
