[ci] cancel workflow with a dedicated token

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,8 @@ jobs:
     - name: If so, cancel the job
       if: "${{ env.DRAFT_PR == 'TRUE' }}"
       uses: andymckay/cancel-action@0.2
+      with:
+        token: ${{ secrets.ICUB_MAIN_TOKEN_PATTACINI }}
             
     - name: Checkout the code
       uses: actions/checkout@main
