Packages creation: update script for 2022.05.0 release

--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -42,8 +42,8 @@ jobs:
       matrix:
         docker_image:
           - "debian:buster"
-          - "ubuntu:bionic"
           - "ubuntu:focal"
+          - "ubuntu:jammy"
     container:
       image: ${{ matrix.docker_image }}
     steps:
