--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,9 @@ name: Continuous Integration
 
 on:
   push:
+    branches:
+    - master
+    - devel
   pull_request:
   schedule:
   # * is a special character in YAML so you have to quote this string
