--- a/.github/workflows/cancel-ci-draft-pr.yml
+++ b/.github/workflows/cancel-ci-draft-pr.yml
@@ -20,21 +20,22 @@ jobs:
           # Retrieve id and head sha of ongoing workflow runs
           gh run list --workflow "Continuous Integration" \
                       --json event,status,databaseId,headSha \
-                      --jq '.[] | select((.event==\"pull_request\") and (.status==\"queued\") and (.status==\"in_progress\")) | [.databaseId, .headSha] | @tsv' > workflow_runs.txt
+                      --jq '.[] | select((.event=="pull_request") and (.status!="completed")) | [.databaseId, .headSha] | @tsv' > workflow_runs.txt
 
-          echo "Ongoing workflow runs: ID and HEAD-SHA"
+          echo "Ongoing workflow runs id and head-sha:"
           cat workflow_runs.txt
+          echo ""
 
           # Retrieve head sha of Draft PRs
           gh pr list --json isDraft,commits --jq '.[] | select(.isDraft) | .commits | last | .oid' > draft_prs.txt
-          echo "Head-sha of Draft PRs"
+          echo "Draft PRs head-sha:"
           cat draft_prs.txt
+          echo ""
 
           # Check ongoing workflow runs against Draft PRs
-          for run in $(cat workflow_runs.txt); do
-            run_id = $(echo ${run} | cut -d' ' -f1)
-            run_sha = $(echo ${run} | cut -d' ' -f2)
-            # Skip this workflow run
+          while read -r run; do
+            run_id=$(echo ${run} | cut -d' ' -f1)
+            run_sha=$(echo ${run} | cut -d' ' -f2)
             if [ "${run_id}" != "${{ github.run_id }}" ]; then
               for pr_sha in $(cat draft_prs.txt); do
                 if [ "${run_sha}" == "${pr_sha}" ]; then
@@ -44,7 +45,7 @@ jobs:
                 fi
               done
             fi
-          done
+          done < workflow_runs.txt
         fi
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
