[ci] further improved cancel ci for draft pr

--- a/.github/workflows/cancel-ci-draft-pr.yml
+++ b/.github/workflows/cancel-ci-draft-pr.yml
@@ -1,7 +1,10 @@
 name: Cancel CI of Draft PR
 
 on:
-  pull_request_target:
+  workflow_run:
+    workflows: [Continuous Integration]
+    types:
+      - requested
 
 jobs:
   check:
@@ -11,13 +14,12 @@ jobs:
     - name: Checkout the code
       uses: actions/checkout@main
     
-    - name: Check
+    - name: Check workflow run
       shell: bash
       run: |
-        if [ ${{ github.event.pull_request.draft }} == true ]; then
-          echo "⚠️ Detected Draft PR!"
-
-          # Retrieve id and head sha of ongoing workflow runs
+        if [ "${{ github.event.workflow_run.event }}" == "pull_request" ]; then
+          echo "Detected pull_request event; start processing..."
+          echo "Retrieve id and head sha of ongoing workflow runs..."
           gh run list --workflow "Continuous Integration" \
                       --json event,status,databaseId,headSha \
                       --jq '.[] | select((.event=="pull_request") and (.status!="completed")) | [.databaseId, .headSha] | @tsv' > workflow_runs.txt
@@ -26,26 +28,31 @@ jobs:
           cat workflow_runs.txt
           echo ""
 
-          # Retrieve head sha of Draft PRs
+          echo "Retrieve head sha of Draft PRs..."
           gh pr list --json isDraft,commits --jq '.[] | select(.isDraft) | .commits | last | .oid' > draft_prs.txt
           echo "Draft PRs head-sha:"
           cat draft_prs.txt
           echo ""
 
-          # Check ongoing workflow runs against Draft PRs
+          echo "Check ongoing workflow runs against Draft PRs..."
           while read -r run; do
             run_id=$(echo ${run} | cut -d' ' -f1)
             run_sha=$(echo ${run} | cut -d' ' -f2)
-            if [ "${run_id}" != "${{ github.run_id }}" ]; then
-              for pr_sha in $(cat draft_prs.txt); do
-                if [ "${run_sha}" == "${pr_sha}" ]; then
-                  echo "Cancelling workflow run ${run_id}..."
-                  gh run cancel ${run_id}
-                  echo "❌ Workflow cancelled!"
-                fi
-              done
-            fi
+            echo "Checking workflow run with id = ${run_id} and head-sha = ${run_sha}..."
+            for pr_sha in $(cat draft_prs.txt); do
+              echo "  ...against pr_sha = ${pr_sha}"
+              if [ "${run_sha}" == "${pr_sha}" ]; then
+                echo "  ⚠️ Detected workflow run associated to a Draft PR!"
+                echo "  Cancelling workflow run ${run_id}..."
+                gh run cancel ${run_id}
+                echo "  ❌ Workflow run cancelled!"
+              else
+                echo "  ✅ No Draft PR associated to this workflow run"  
+              fi
+            done
           done < workflow_runs.txt
+        else
+          echo "No pull_request event detected; skipping..."  
         fi
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
