replaced controlboardwrapper2 w/ controlBoard_nws_yarp

--- a/app/simConfig/conf/Sim_right_arm.ini
+++ b/app/simConfig/conf/Sim_right_arm.ini
@@ -1,15 +1,14 @@
 /// initialization file for the right arm of the iCub Simulation
 
-device controlboardwrapper2
+device controlBoard_nws_yarp
 subdevice simulationcontrol
 name /right_arm
-rate 100
+period 0.02
 
 [GENERAL]
 Type 2 /// 1 is for the left arm  ///2 is for the right....
 TotalJoints 16 //total number of joints....
 
-AxisMap 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 
 Vel 20.0
 Zeros 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0
 Encoder 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533
