--- a/app/simConfig/conf/Sim_right_leg.ini
+++ b/app/simConfig/conf/Sim_right_leg.ini
@@ -1,15 +1,14 @@
 /// initialization file for the head of the iCub Simulation
 
-device controlboardwrapper2
+device controlBoard_nws_yarp
 subdevice simulationcontrol
 name /right_leg
-rate 100
+period 0.02
 
 [GENERAL]
 Type 5
 TotalJoints 6 //total number of joints....
 
-AxisMap 0 1 2 3 4 5   
 Vel 20.0
 Zeros 0.0 0.0 0.0 0.0 0.0 0.0 
 Encoder 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533 0.0174533
