[ci] specified triggering types for pull_request event

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
     - master
     - devel
   pull_request:
+    types: [opened, reopened, synchronize, ready_for_review]
   schedule:
   # * is a special character in YAML so you have to quote this string
   # Execute a "nightly" build at 2 AM UTC
