--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -1,9 +1,7 @@
 name: Packages creation
 
 on:
-    release:
-      types:
-        - created
+  workflow_dispatch:
 
 jobs:
 # start job "preliminary-steps"
