added canBusFtSensor with ISixAxisForceTorqueSensors interface

--- a/src/libraries/icubmod/CMakeLists.txt
+++ b/src/libraries/icubmod/CMakeLists.txt
@@ -37,6 +37,7 @@ yarp_begin_plugin_library(icubmod QUIET)
   add_subdirectory(xsensmtx)
   add_subdirectory(skinWrapper)
   add_subdirectory(canBusAnalogSensor)
+  add_subdirectory(canBusFtSensor)
   add_subdirectory(canBusVirtualAnalogSensor)
   add_subdirectory(canBusInertialMTB)
   add_subdirectory(canBusSkin)
