fix deps from YARP

--- a/src/libraries/icubmod/embObjMultipleFTsensors/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjMultipleFTsensors/CMakeLists.txt
@@ -9,16 +9,17 @@ yarp_prepare_plugin(embObjMultipleFTsensors CATEGORY device
                                  INCLUDE embObjMultipleFTsensors.h
                                  EXTRA_CONFIG WRAPPER=analogServer)
 
-IF (NOT SKIP_embObjMultipleFTsensors)
+if (NOT SKIP_embObjMultipleFTsensors)
 
 
   set(ICUB_COMPILE_EMBOBJ_LIBRARY ON CACHE INTERNAL "use the embObjLib lib")
 
 
-  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+  include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
   yarp_add_plugin(embObjMultipleFTsensors embObjMultipleFTsensors.cpp embObjMultipleFTsensors.h)
-  TARGET_LINK_LIBRARIES(embObjMultipleFTsensors ethResources)
+  target_link_libraries(embObjMultipleFTsensors ethResources
+                        YARP::YARP_os YARP::YARP_dev YARP::YARP_sig)
   icub_export_plugin(embObjMultipleFTsensors)
 
   yarp_install(TARGETS embObjMultipleFTsensors
@@ -28,13 +29,13 @@ IF (NOT SKIP_embObjMultipleFTsensors)
         YARP_INI DESTINATION ${ICUB_PLUGIN_MANIFESTS_INSTALL_DIR})
 
   if (BUILD_TESTING)
-   add_library(embObjMultipleFTsensorsUT STATIC embObjMultipleFTsensors.cpp embObjMultipleFTsensors.h)    
-   target_link_libraries(embObjMultipleFTsensorsUT ethResources
-                                    YARP::YARP_dev
-                                    icub_firmware_shared::embobj)
+   add_library(embObjMultipleFTsensorsUT STATIC embObjMultipleFTsensors.cpp embObjMultipleFTsensors.h)
+    target_link_libraries(embObjMultipleFTsensorsUT ethResources
+                          YARP::YARP_os YARP::YARP_dev YARP::YARP_sig
+                          icub_firmware_shared::embobj)
                                         
    target_include_directories(embObjMultipleFTsensorsUT PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>")
   endif()
 
-ENDIF (NOT SKIP_embObjMultipleFTsensors)
+endif()
 
