--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,17 +126,30 @@ jobs:
         mkdir -p build
         cd build
         cmake -A x64 -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install \
-              -DICUB_USE_icub_firmware_shared:BOOL=ON -DENABLE_icubmod_serial:BOOL=ON \
-              -DENABLE_icubmod_serialport:BOOL=ON -DENABLE_icubmod_skinWrapper:BOOL=ON \
-              -DENABLE_icubmod_portaudio:BOOL=ON -DENABLE_icubmod_sharedcan:BOOL=ON \
-              -DENABLE_icubmod_canmotioncontrol:BOOL=ON -DENABLE_icubmod_canBusAnalogSensor:BOOL=ON \
-              -DENABLE_icubmod_canBusInertialMTB:BOOL=ON -DENABLE_icubmod_canBusSkin:BOOL=ON \
-              -DENABLE_icubmod_canBusVirtualAnalogSensor:BOOL=ON -DENABLE_icubmod_embObjFTsensor:BOOL=ON \
-              -DENABLE_icubmod_embObjIMU:BOOL=ON -DENABLE_icubmod_embObjInertials:BOOL=ON \
-              -DENABLE_icubmod_embObjMais:BOOL=ON -DENABLE_icubmod_embObjMotionControl:BOOL=ON \
-              -DENABLE_icubmod_embObjSkin:BOOL=ON -DENABLE_icubmod_embObjStrain:BOOL=ON -DENABLE_icubmod_embObjMultipleFTsensors:BOOL=ON \
-              -DENABLE_icubmod_parametricCalibrator:BOOL=ON -DENABLE_icubmod_parametricCalibratorEth:BOOL=ON \
-              -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install ..
+              -DICUB_USE_icub_firmware_shared:BOOL=ON \
+              -DENABLE_icubmod_serial:BOOL=ON \
+              -DENABLE_icubmod_serialport:BOOL=ON \
+              -DENABLE_icubmod_skinWrapper:BOOL=ON \
+              -DENABLE_icubmod_portaudio:BOOL=ON \
+              -DENABLE_icubmod_sharedcan:BOOL=ON \
+              -DENABLE_icubmod_canmotioncontrol:BOOL=ON \
+              -DENABLE_icubmod_canBusAnalogSensor:BOOL=ON \
+              -DENABLE_icubmod_canBusInertialMTB:BOOL=ON \
+              -DENABLE_icubmod_canBusSkin:BOOL=ON \
+              -DENABLE_icubmod_canBusVirtualAnalogSensor:BOOL=ON \
+              -DENABLE_icubmod_embObjFTsensor:BOOL=ON \
+              -DENABLE_icubmod_embObjIMU:BOOL=ON \
+              -DENABLE_icubmod_embObjInertials:BOOL=ON \
+              -DENABLE_icubmod_embObjMais:BOOL=ON \
+              -DENABLE_icubmod_embObjMotionControl:BOOL=ON \
+              -DENABLE_icubmod_embObjBattery:BOOL=ON \
+              -DENABLE_icubmod_embObjSkin:BOOL=ON \
+              -DENABLE_icubmod_embObjStrain:BOOL=ON \
+              -DENABLE_icubmod_embObjMultipleFTsensors:BOOL=ON \
+              -DENABLE_icubmod_parametricCalibrator:BOOL=ON \
+              -DENABLE_icubmod_parametricCalibratorEth:BOOL=ON \
+              -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
+              -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install ..
 
     - name: Configure [Ubuntu/macOS]
       if: matrix.os == 'ubuntu-latest' || matrix.os == 'macOS-latest'
@@ -145,16 +158,28 @@ jobs:
         mkdir -p build
         cd build
         cmake -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-              -DICUB_USE_icub_firmware_shared:BOOL=ON -DENABLE_icubmod_serial:BOOL=ON \
-              -DENABLE_icubmod_serialport:BOOL=ON -DENABLE_icubmod_skinWrapper:BOOL=ON \
-              -DENABLE_icubmod_portaudio:BOOL=ON -DENABLE_icubmod_sharedcan:BOOL=ON \
-              -DENABLE_icubmod_canmotioncontrol:BOOL=ON -DENABLE_icubmod_canBusAnalogSensor:BOOL=ON \
-              -DENABLE_icubmod_canBusInertialMTB:BOOL=ON -DENABLE_icubmod_canBusSkin:BOOL=ON \
-              -DENABLE_icubmod_canBusVirtualAnalogSensor:BOOL=ON -DENABLE_icubmod_embObjFTsensor:BOOL=ON \
-              -DENABLE_icubmod_embObjIMU:BOOL=ON -DENABLE_icubmod_embObjInertials:BOOL=ON \
-              -DENABLE_icubmod_embObjMais:BOOL=ON -DENABLE_icubmod_embObjMotionControl:BOOL=ON \
-              -DENABLE_icubmod_embObjSkin:BOOL=ON -DENABLE_icubmod_embObjStrain:BOOL=ON -DENABLE_icubmod_embObjMultipleFTsensors:BOOL=ON \
-              -DENABLE_icubmod_parametricCalibrator:BOOL=ON -DENABLE_icubmod_parametricCalibratorEth:BOOL=ON \
+              -DICUB_USE_icub_firmware_shared:BOOL=ON \
+              -DENABLE_icubmod_serial:BOOL=ON \
+              -DENABLE_icubmod_serialport:BOOL=ON \
+              -DENABLE_icubmod_skinWrapper:BOOL=ON \
+              -DENABLE_icubmod_portaudio:BOOL=ON \
+              -DENABLE_icubmod_sharedcan:BOOL=ON \
+              -DENABLE_icubmod_canmotioncontrol:BOOL=ON \
+              -DENABLE_icubmod_canBusAnalogSensor:BOOL=ON \
+              -DENABLE_icubmod_canBusInertialMTB:BOOL=ON \
+              -DENABLE_icubmod_canBusSkin:BOOL=ON \
+              -DENABLE_icubmod_canBusVirtualAnalogSensor:BOOL=ON \
+              -DENABLE_icubmod_embObjFTsensor:BOOL=ON \
+              -DENABLE_icubmod_embObjIMU:BOOL=ON \
+              -DENABLE_icubmod_embObjInertials:BOOL=ON \
+              -DENABLE_icubmod_embObjMais:BOOL=ON \
+              -DENABLE_icubmod_embObjMotionControl:BOOL=ON \
+              -DENABLE_icubmod_embObjBattery:BOOL=ON \
+              -DENABLE_icubmod_embObjSkin:BOOL=ON \
+              -DENABLE_icubmod_embObjStrain:BOOL=ON \
+              -DENABLE_icubmod_embObjMultipleFTsensors:BOOL=ON \
+              -DENABLE_icubmod_parametricCalibrator:BOOL=ON \
+              -DENABLE_icubmod_parametricCalibratorEth:BOOL=ON \
               -DBUILD_TESTING:BOOL=ON \
               -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install ..
 
