--- a/src/unittest/CMakeLists.txt
+++ b/src/unittest/CMakeLists.txt
@@ -51,6 +51,9 @@ install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 #
 #include(GoogleTest)
 #gtest_discover_tests(${PROJECT_NAME})
+gtest_add_tests(TARGET ${PROJECT_NAME} TEST_PREFIX old:)
+gtest_discover_tests(${PROJECT_NAME} TEST_PREFIX new:)
+add_test(NAME monolithic COMMAND ${PROJECT_NAME})
 
 #add_custom_target(run_unit_test ALL
 #    COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure
