Use CMAKE_INSTALL_PYTHONDIR to specify Python installation directory

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -67,8 +67,6 @@ if(CREATE_PYTHON)
                     OUTPUT_VARIABLE PYTHON_INSTDIR
                     OUTPUT_STRIP_TRAILING_WHITESPACE)
 
-    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/icub.py DESTINATION ${PYTHON_INSTDIR})
-
     set(_CMAKE_INSTALL_PYTHONDIR "${PYTHON_INSTDIR}")
     set(CMAKE_INSTALL_PYTHONDIR ${_CMAKE_INSTALL_PYTHONDIR} CACHE PATH "python bindings (${_CMAKE_INSTALL_PYTHONDIR})")
     mark_as_advanced(CMAKE_INSTALL_PYTHONDIR)
@@ -90,7 +88,8 @@ if(CREATE_PYTHON)
       set_target_properties("${SWIG_MODULE_icub_python_REAL_NAME}" PROPERTIES INSTALL_RPATH "${_current_rpath}")
     endif()
 
-    install(TARGETS ${SWIG_MODULE_icub_python_REAL_NAME} DESTINATION ${PYTHON_INSTDIR})
+    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/icub.py DESTINATION ${CMAKE_INSTALL_PYTHONDIR})
+    install(TARGETS ${SWIG_MODULE_icub_python_REAL_NAME} DESTINATION ${CMAKE_INSTALL_PYTHONDIR})
 endif()
 
 if(CREATE_RUBY)
