Revert "[ci] removed unnecessary step"
This reverts commit 5d61c88a411812c6a15f1412171960c6f167698e.

--- a/.github/workflows/cancel-ci-draft-pr.yml
+++ b/.github/workflows/cancel-ci-draft-pr.yml
@@ -11,6 +11,9 @@ jobs:
     name: Check for draft PR
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout the code
+      uses: actions/checkout@main
+    
     - name: Check workflow run
       shell: bash
       run: |
