--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -149,8 +149,9 @@ jobs:
               -DENABLE_icubmod_embObjStrain:BOOL=ON \
               -DENABLE_icubmod_embObjMultipleFTsensors:BOOL=ON \
               -DENABLE_icubmod_parametricCalibrator:BOOL=ON \
-              -DENABLE_icubmod_parametricCalibratorEth:BOOL=ON \
+              -DENABLE_icubmod_parametricCalibratorEth:BOOL=ON \ 
               -DBUILD_TESTING:BOOL=ON \
+              -DICUB_SHARED_LIBRARY:BOOL=OFF \
               -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install ..
 
     - name: Configure [Ubuntu/macOS]
