--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -190,7 +190,6 @@ jobs:
       shell: bash
       run: |
         cd build
-        dir ${GITHUB_WORKSPACE}/install/bin
         export PATH=$PATH:${GITHUB_WORKSPACE}/install/lib/yarp:${GITHUB_WORKSPACE}/install/bin:${GITHUB_WORKSPACE}/install
         ctest run_unit_test --output-on-failure -C ${{ matrix.build_type }} .
 
@@ -198,4 +197,5 @@ jobs:
       shell: bash
       run: |
         cd build
+        export PATH=$PATH:${GITHUB_WORKSPACE}/install/lib/yarp:${GITHUB_WORKSPACE}/install/bin:${GITHUB_WORKSPACE}/install
         cmake --build . --config ${{ matrix.build_type }} --target install
