--- a/src/unittest/CMakeLists.txt
+++ b/src/unittest/CMakeLists.txt
@@ -52,7 +52,8 @@ PRIVATE
 #include(GoogleTest)
 #gtest_discover_tests(${PROJECT_NAME})
 gtest_add_tests(TARGET ${PROJECT_NAME} TEST_PREFIX old:)
-gtest_discover_tests(${PROJECT_NAME} TEST_PREFIX new:)
+gtest_discover_tests(${PROJECT_NAME} TEST_PREFIX new: PROPERTIES TIMEOUT 600)
+#gtest_discover_tests(${PROJECT_NAME} PROPERTIES TIMEOUT 600)
 add_test(NAME monolithic COMMAND ${PROJECT_NAME})
 
 #add_custom_target(run_unit_test ALL
