--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,15 @@ jobs:
         sudo apt install -y git build-essential cmake libace-dev coinor-libipopt-dev libeigen3-dev libopencv-dev qtbase5-dev \
                             qtdeclarative5-dev qtmultimedia5-dev libtinyxml-dev libgsl-dev libpython3-dev swig
 
+    - name: Determine icub-firmware-shared branch
+      shell: bash
+      run: |
+        if [[ "${{ github.event_name }}" == "schedule" || "${{ github.ref }}" == "refs/heads/master" || "${{ github.head_ref }}" == "refs/heads/master" ]]; then
+          echo "icubfwshared_branch=master" >> $GITHUB_ENV
+        else
+          echo "icubfwshared_branch=devel" >> $GITHUB_ENV
+        fi
+
     - name: Source-based Dependencies [Windows]
       if: matrix.os == 'windows-latest'
       shell: bash
@@ -85,13 +94,8 @@ jobs:
               -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install ..
         cmake --build . --config ${{ matrix.build_type }} --target INSTALL
         # icub-firmware-shared
-        if [[ "${{ github.event_name }}" == "schedule" || "${{ github.ref }}" == "refs/heads/master" || "${{ github.head_ref }}" == "refs/heads/master" ]]; then
-          icubfwshared_branch = "master"
-        else
-          icubfwshared_branch = "devel"
-        fi
         cd ${GITHUB_WORKSPACE}
-        git clone https://github.com/robotology/icub-firmware-shared.git --depth 1 --branch ${icubfwshared_branch}
+        git clone https://github.com/robotology/icub-firmware-shared.git --depth 1 --branch ${env.icubfwshared_branch}
         cd icub-firmware-shared && mkdir -p build && cd build
         cmake -A x64 -DCMAKE_TOOLCHAIN_FILE=${VCPKG_INSTALLATION_ROOT}/scripts/buildsystems/vcpkg.cmake \
               -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install ..
@@ -115,7 +119,7 @@ jobs:
         cmake --build . --config ${{ matrix.build_type }} --target install
         # icub-firmware-shared
         cd ${GITHUB_WORKSPACE}
-        git clone https://github.com/robotology/icub-firmware-shared.git --depth 1 --branch devel
+        git clone https://github.com/robotology/icub-firmware-shared.git --depth 1 --branch ${env.icubfwshared_branch}
         cd icub-firmware-shared && mkdir -p build && cd build
         cmake  -DCMAKE_PREFIX_PATH=${GITHUB_WORKSPACE}/install -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/install ..
         cmake --build . --config ${{ matrix.build_type }} --target install
