--- a/src/modules/cartesianInterfaceControl/CMakeLists.txt
+++ b/src/modules/cartesianInterfaceControl/CMakeLists.txt
@@ -5,6 +5,6 @@
 
 project(cartesianInterfaceControl)
 add_executable(${PROJECT_NAME} main.cpp)
-target_link_libraries(${PROJECT_NAME} ${YARP_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} iKin ${YARP_LIBRARIES})
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
 
