[ikingazectrl] update head version control

--- a/app/gazeboCartesianControl/conf/iKinGazeCtrl.ini
+++ b/app/gazeboCartesianControl/conf/iKinGazeCtrl.ini
@@ -1,5 +1,5 @@
 robot                 icubSim
-head_version          2.5
+head_version          v2.5
 neck_position_control on
 saccades              off
 
